--- a/AllSimilarities.ipynb
+++ b/AllSimilarities.ipynb
@@ -2,24 +2,24 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 20,
+            "execution_count": 5,
             "source": [
                 "\r\n",
                 "from tika import parser\r\n",
-                "from vector import Vector\r\n",
-                "import os, itertools, argparse, csv\r\n",
+                "import os, editdistance, itertools, argparse, csv\r\n",
                 "from requests import ConnectionError\r\n",
                 "from time import sleep\r\n",
                 "import ast\r\n",
                 "import pandas as pd\r\n",
-                "import json\r\n"
+                "import json\r\n",
+                "from functools import reduce"
             ],
             "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 34,
+            "execution_count": 2,
             "source": [
                 "\r\n",
                 "import math\r\n",
@@ -134,50 +134,94 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 35,
+            "execution_count": 8,
             "source": [
-                "# computeScores('htmls/', 'test.csv', 'html')\r\n",
-                "\r\n",
-                "inputDir = 'htmls/'\r\n",
-                "acceptTypes = 'html'\r\n",
-                "outCSV = 'test.csv'\r\n",
+                "inputDir = 'SisiHTML/'\r\n",
+                "na_metadata = [\"resourceName\"]\r\n",
                 "filename_list = []\r\n",
                 "\r\n",
-                "for root, dirnames, files in os.walk(inputDir):\r\n",
-                "    dirnames[:] = [d for d in dirnames if not d.startswith('.')]\r\n",
+                "for root,_, files in os.walk(inputDir):\r\n",
                 "    for filename in files:\r\n",
                 "        filename_list.append(filename)\r\n",
                 "\r\n",
-                "data = []\r\n",
+                "All_features = {}\r\n",
+                "for filename in filename_list:\r\n",
+                "    All_features[filename] = parser.from_file(inputDir + filename)[\"metadata\"]\r\n",
+                "\r\n",
+                "data_cosine = []\r\n",
+                "data_jaccard = []\r\n",
+                "data_edit = []\r\n",
                 "files_tuple = itertools.combinations(filename_list, 2)\r\n",
                 "for file1, file2 in files_tuple:\r\n",
+                "    features = All_features[file1]\r\n",
+                "    features2 = All_features[file2]\r\n",
+                "\r\n",
+                "\r\n",
+                "    # Cosine ******************************************************************************************\r\n",
                 "    try:\r\n",
-                "        row_cosine_distance = [file1, file2]\r\n",
-                "    \r\n",
-                "        features = parser.from_file('htmls/' +file1)[\"metadata\"]\r\n",
-                "        features2 = parser.from_file('htmls/' +file2)[\"metadata\"]\r\n",
-                "    \r\n",
                 "        v1 = Vector(file1, features)\r\n",
                 "        v2 = Vector(file2, features2)\r\n",
-                "    \r\n",
+                "        data_cosine.append([file1, file2, v1.cosTheta(v2)])\r\n",
+                "    except:\r\n",
+                "        pass\r\n",
                 "\r\n",
-                "        row_cosine_distance.append(v1.cosTheta(v2))     \r\n",
-                "        # a.writerow(row_cosine_distance)  \r\n",
-                "        data.append(row_cosine_distance)\r\n",
-                "        # break\r\n",
-                "    except Exception as e:\r\n",
-                "        continue\r\n",
+                "    # Jaccard ******************************************************************************************\r\n",
+                "    try:\r\n",
+                "        f1MetaData = features\r\n",
+                "        f2MetaData = features2\r\n",
+                "        isCoExistant = lambda k: ( k in f2MetaData) and ( f1MetaData[k] == f2MetaData[k] )\r\n",
+                "        intersection = reduce(lambda m,k: (m + 1) if isCoExistant(k) else m, list(f1MetaData.keys()), 0)\r\n",
+                "        union = len(list(f1MetaData.keys())) + len(list(f2MetaData.keys())) - intersection\r\n",
+                "        jaccard = float(intersection) / union\r\n",
+                "        data_jaccard.append([file1, file2, jaccard])\r\n",
+                "    except:\r\n",
+                "        pass\r\n",
                 "\r\n",
-                "df = pd.DataFrame(data=data,columns=[\"x-coordinate\",\"y-coordinate\",\"Similarity_score\"])"
+                "    # Edit   ******************************************************************************************\r\n",
+                "    try:\r\n",
+                "        file1_parsedData = features\r\n",
+                "        file2_parsedData = features2\r\n",
+                "        intersect_features = set(file1_parsedData.keys()) & set(file2_parsedData.keys()) \r\n",
+                "        intersect_features = [feature for feature in intersect_features if feature not in na_metadata ]\r\n",
+                "        file_edit_distance = 0.0\r\n",
+                "        for feature in intersect_features:\r\n",
+                "            file1_feature_value = stringify(file1_parsedData[feature])\r\n",
+                "            file2_feature_value = stringify(file2_parsedData[feature])\r\n",
+                "            if len(file1_feature_value) == 0 and len(file2_feature_value) == 0:\r\n",
+                "                feature_distance = 0.0\r\n",
+                "            else:\r\n",
+                "                feature_distance = float(editdistance.eval(file1_feature_value, file2_feature_value))/(len(file1_feature_value) if len(file1_feature_value) > len(file2_feature_value) else len(file2_feature_value))\r\n",
+                "            file_edit_distance += feature_distance\r\n",
+                "        if allKeys:\r\n",
+                "            file1_only_features = set(file1_parsedData.keys()) - set(intersect_features)\r\n",
+                "            file1_only_features = [feature for feature in file1_only_features if feature not in na_metadata]\r\n",
+                "\r\n",
+                "            file2_only_features = set(file2_parsedData.keys()) - set(intersect_features)\r\n",
+                "            file2_only_features = [feature for feature in file2_only_features if feature not in na_metadata]\r\n",
+                "\r\n",
+                "            file_edit_distance += len(file1_only_features) + len(file2_only_features)       # increment by 1 for each disjunct feature in (A-B) & (B-A), file1_disjunct_feature_value/file1_disjunct_feature_value = 1\r\n",
+                "            file_edit_distance /= float(len(intersect_features) + len(file1_only_features) + len(file2_only_features))\r\n",
+                "\r\n",
+                "        else:\r\n",
+                "            file_edit_distance /= float(len(intersect_features))    #average edit distance\r\n",
+                "        data_edit.append([file1, file2, 1-file_edit_distance])\r\n",
+                "    except:\r\n",
+                "        pass\r\n",
+                "\r\n",
+                "df_cosine = pd.DataFrame(data=data_cosine,columns=[\"x-coordinate\",\"y-coordinate\",\"Similarity_score\"])\r\n",
+                "df_jaccard = pd.DataFrame(data=data_jaccard,columns=[\"x-coordinate\",\"y-coordinate\",\"Similarity_score\"])\r\n",
+                "df_edit = pd.DataFrame(data=data_edit,columns=[\"x-coordinate\",\"y-coordinate\",\"Similarity_score\"])"
             ],
             "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 36,
+            "execution_count": 9,
             "source": [
-                "df.to_csv('cosine_similarity.csv',index=False)"
+                "df_cosine.to_csv('cosine_similarity.csv',index=False)\r\n",
+                "df_jaccard.to_csv('jaccard_similarity.csv',index=False)\r\n",
+                "df_edit.to_csv('edit_similarity.csv',index=False)"
             ],
             "outputs": [],
             "metadata": {}
