Fix Edit Similarity

--- a/AllSimilarities.ipynb
+++ b/AllSimilarities.ipynb
@@ -2,7 +2,7 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 5,
+            "execution_count": 1,
             "source": [
                 "\r\n",
                 "from tika import parser\r\n",
@@ -134,11 +134,12 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 8,
+            "execution_count": 4,
             "source": [
                 "inputDir = 'SisiHTML/'\r\n",
                 "na_metadata = [\"resourceName\"]\r\n",
                 "filename_list = []\r\n",
+                "allKeys = True\r\n",
                 "\r\n",
                 "for root,_, files in os.walk(inputDir):\r\n",
                 "    for filename in files:\r\n",
@@ -201,11 +202,11 @@
                 "\r\n",
                 "            file_edit_distance += len(file1_only_features) + len(file2_only_features)       # increment by 1 for each disjunct feature in (A-B) & (B-A), file1_disjunct_feature_value/file1_disjunct_feature_value = 1\r\n",
                 "            file_edit_distance /= float(len(intersect_features) + len(file1_only_features) + len(file2_only_features))\r\n",
-                "\r\n",
                 "        else:\r\n",
                 "            file_edit_distance /= float(len(intersect_features))    #average edit distance\r\n",
                 "        data_edit.append([file1, file2, 1-file_edit_distance])\r\n",
-                "    except:\r\n",
+                "    except Exception as e:\r\n",
+                "        # raise e\r\n",
                 "        pass\r\n",
                 "\r\n",
                 "df_cosine = pd.DataFrame(data=data_cosine,columns=[\"x-coordinate\",\"y-coordinate\",\"Similarity_score\"])\r\n",
@@ -217,7 +218,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 9,
+            "execution_count": 6,
             "source": [
                 "df_cosine.to_csv('cosine_similarity.csv',index=False)\r\n",
                 "df_jaccard.to_csv('jaccard_similarity.csv',index=False)\r\n",
