Organize similarity files better.

--- a/AllSimilarities.ipynb
+++ b/AllSimilarities.ipynb
@@ -220,9 +220,9 @@
             "cell_type": "code",
             "execution_count": 6,
             "source": [
-                "df_cosine.to_csv('cosine_similarity.csv',index=False)\r\n",
-                "df_jaccard.to_csv('jaccard_similarity.csv',index=False)\r\n",
-                "df_edit.to_csv('edit_similarity.csv',index=False)"
+                "df_cosine.to_csv('data/similarity/cosine_similarity.csv',index=False)\r\n",
+                "df_jaccard.to_csv('data/similarity/jaccard_similarity.csv',index=False)\r\n",
+                "df_edit.to_csv('data/similarity/edit_similarity.csv',index=False)"
             ],
             "outputs": [],
             "metadata": {}
