Update GoogleMapsAPI script

--- a/GoogleMapsAPI/Add_Image_features.ipynb
+++ b/GoogleMapsAPI/Add_Image_features.ipynb
@@ -11,35 +11,33 @@
                 "from AlvinGoogleAPI import *\r\n",
                 "pd.set_option('display.max_columns', None)"
             ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 3,
-            "source": [
-                "df = pd.read_csv(\"../data/Bik dataset - papers with endpoint reached.tsv\", sep='\\t', encoding = \"ISO-8859-1\")\r\n",
-                "df = df.dropna(subset=['Authors'])\r\n",
-                "df.to_csv('../data/Bik dataset.csv',index=False)\r\n",
-                "df.shape"
-            ],
             "outputs": [
                 {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "(214, 17)"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 3
+                    "output_type": "stream",
+                    "name": "stderr",
+                    "text": [
+                        "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\compat\\_optional.py:138: UserWarning: Pandas requires version '2.7.0' or newer of 'numexpr' (version '2.6.9' currently installed).\n",
+                        "  warnings.warn(msg, UserWarning)\n"
+                    ]
                 }
             ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": 2,
+            "source": [
+                "# df = pd.read_csv(\"../data/Bik dataset - papers with endpoint reached.tsv\", sep='\\t', encoding = \"ISO-8859-1\")\r\n",
+                "# df = df.dropna(subset=['Authors'])\r\n",
+                "# df.to_csv('../data/Bik dataset.csv',index=False)\r\n",
+                "# df.shape"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
             "source": [
                 "df = pd.read_csv('../data/sisi.csv')"
             ],
